style: Fix stretching of product images

--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -70,10 +70,11 @@ h1 {
   border-radius: 0.5rem;
   transition: 0.3s ease;
   flex-shrink: 0;
+  text-align: center;
 }
 
 .card-img img {
-  width: 100%;
+  width: auto;
   max-height: 150px;
 }
 
